wrappers/delphi/garry/garry.pas

unit garry;

{$IFDEF FPC}
  {$MODE DELPHI}
{$ENDIF}

interface

uses
  garry_types;

const
  {$IFDEF MSWINDOWS}
  GARRY_LIB = 'garry.dll';
  {$ELSE}
  {$IFDEF DARWIN}
  GARRY_LIB = 'libgarry.dylib';
  {$ELSE}
  GARRY_LIB = 'libgarry.so';
  {$ENDIF}
  {$ENDIF}

function garry_config_default: TGarryConfig; cdecl;
function garry_database_create(Path: PAnsiChar): PGarryDatabaseHandle; cdecl;
function garry_database_create_with_config(Path: PAnsiChar;
  const Config: TGarryConfig): PGarryDatabaseHandle; cdecl;
function garry_database_open(Path: PAnsiChar): PGarryDatabaseHandle; cdecl;
procedure garry_database_close(DB: PGarryDatabaseHandle); cdecl;

function garry_txn_begin(DB: PGarryDatabaseHandle): Integer; cdecl;
procedure garry_txn_commit(DB: PGarryDatabaseHandle; Txn: Integer); cdecl;
procedure garry_txn_rollback(DB: PGarryDatabaseHandle; Txn: Integer); cdecl;

function garry_get(DB: PGarryDatabaseHandle; Txn: Integer;
  const Key: PByte; KeyLen: Integer;
  Value: PByte; var ValueLen: Integer): TGarryStatus; cdecl;
function garry_set(DB: PGarryDatabaseHandle; Txn: Integer;
  const Key: PByte; KeyLen: Integer;
  const Value: PByte; ValueLen: Integer): TGarryStatus; cdecl;
function garry_delete(DB: PGarryDatabaseHandle; Txn: Integer;
  const Key: PByte; KeyLen: Integer): TGarryStatus; cdecl;
function garry_get_default(DB: PGarryDatabaseHandle; Txn: Integer;
  const Key: PByte; KeyLen: Integer;
  const Def: PByte; DefLen: Integer;
  Value: PByte; var ValueLen: Integer): TGarryStatus; cdecl;
function garry_data(DB: PGarryDatabaseHandle; Txn: Integer;
  const Key: PByte; KeyLen: Integer): Integer; cdecl;

function garry_first(DB: PGarryDatabaseHandle; Txn: Integer;
  Key: PByte; var KeyLen: Integer): Boolean; cdecl;
function garry_last(DB: PGarryDatabaseHandle; Txn: Integer;
  Key: PByte; var KeyLen: Integer): Boolean; cdecl;
function garry_next_key(DB: PGarryDatabaseHandle; Txn: Integer;
  const After: PByte; AfterLen: Integer;
  Key: PByte; var KeyLen: Integer): Boolean; cdecl;
function garry_prev_key(DB: PGarryDatabaseHandle; Txn: Integer;
  const Before: PByte; BeforeLen: Integer;
  Key: PByte; var KeyLen: Integer): Boolean; cdecl;
function garry_exists(DB: PGarryDatabaseHandle; Txn: Integer;
  const Key: PByte; KeyLen: Integer): Boolean; cdecl;
function garry_count(DB: PGarryDatabaseHandle; Txn: Integer): Integer; cdecl;

function garry_cursor_open(DB: PGarryDatabaseHandle; Txn: Integer;
  const Prefix: PByte; PrefixLen: Integer): PGarryCursorHandle; cdecl;
function garry_cursor_next(Cursor: PGarryCursorHandle;
  Key: PByte; var KeyLen: Integer;
  Value: PByte; var ValueLen: Integer): Boolean; cdecl;
function garry_cursor_next_key(Cursor: PGarryCursorHandle;
  Key: PByte; var KeyLen: Integer): Boolean; cdecl;
procedure garry_cursor_close(Cursor: PGarryCursorHandle); cdecl;

procedure garry_for_each(DB: PGarryDatabaseHandle; Txn: Integer;
  const Prefix: PByte; PrefixLen: Integer;
  Visitor: TGarryVisitor; UserData: Pointer); cdecl;

function garry_key_split(Str: PAnsiChar; Delimiter: AnsiChar;
  OutBuf: PByte): Integer; cdecl;
function garry_key_unsplit(const Key: PByte; KeyLen: Integer;
  Delimiter: AnsiChar; OutStr: PAnsiChar; OutSize: Integer): Integer; cdecl;
function garry_make_key(Str: PAnsiChar; OutBuf: PByte): Integer; cdecl;
function garry_make_key_parts(Parts: PPAnsiChar; Count: Integer;
  OutBuf: PByte): Integer; cdecl;

procedure garry_empty_byte_array(OutBuf: PByte); cdecl;
function garry_make_key_2(P1, P2: PAnsiChar): TGarryKeyTuple; cdecl;
function garry_make_key_3(P1, P2, P3: PAnsiChar): TGarryKeyTuple; cdecl;
function garry_make_key_4(P1, P2, P3, P4: PAnsiChar): TGarryKeyTuple; cdecl;
procedure garry_encode_key_tuple(const T: PGarryKeyTuple; OutBuf: PByte); cdecl;
function garry_byte_compare(const A: PByte; ALen: Integer;
  const B: PByte; BLen: Integer): Integer; cdecl;

function garry_set_str(DB: PGarryDatabaseHandle; Txn: Integer;
  Key: PAnsiChar; Value: PAnsiChar): TGarryStatus; cdecl;
function garry_get_str(DB: PGarryDatabaseHandle; Txn: Integer;
  Key: PAnsiChar; Value: PAnsiChar; ValueSize: Integer): TGarryStatus; cdecl;

function garry_strerror(Status: TGarryStatus): PAnsiChar; cdecl;

type
  TGarryDatabase = class
  private
    FHandle: PGarryDatabaseHandle;
    function GetTxn: Integer;
  public
    constructor Create(const Path: string; CreateNew: Boolean = False);
    destructor Destroy; override;

    function Get(const Key: string): TBytes;
    function Get(const Key: TBytes): TBytes;
    procedure SetKeyValue(const Key: string; const Value: TBytes); overload;
    procedure SetKeyValue(const Key: TBytes; const Value: TBytes); overload;
    function Delete(const Key: string): Boolean;
    function Delete(const Key: TBytes): Boolean;
    function Exists(const Key: string): Boolean;
    function Exists(const Key: TBytes): Boolean;

    function Count: Integer;
    function First: TBytes;
    function Last: TBytes;
    function NextKey(const After: TBytes): TBytes;
    function PrevKey(const Before: TBytes): TBytes;

    function BeginTxn: Integer;
    procedure Commit(Txn: Integer);
    procedure Rollback(Txn: Integer);

    function OpenCursor(const Prefix: TBytes): TGarryCursor;
    function OpenCursorAll: TGarryCursor;

    property Handle: PGarryDatabaseHandle read FHandle;
  end;

  TGarryCursor = class
  private
    FHandle: PGarryCursorHandle;
    FDB: TGarryDatabase;
  public
    constructor Create(AHandle: PGarryCursorHandle; ADB: TGarryDatabase);
    destructor Destroy; override;

    function Next(var Key, Value: TBytes): Boolean;
    function NextKey(var Key: TBytes): Boolean;

    property Handle: PGarryCursorHandle read FHandle;
  end;

function EncodeKey(const Parts: array of AnsiString): TBytes;
function DecodeKey(const Key: TBytes): TArray<AnsiString>;

implementation

uses
  SysUtils
  {$IFDEF FPC}
  , dynlibs
  {$ENDIF}
  ;

var
  GarryLibHandle: THandle;
  _garry_config_default: function: TGarryConfig; cdecl;
  _garry_database_create: function(Path: PAnsiChar): PGarryDatabaseHandle; cdecl;
  _garry_database_create_with_config: function(Path: PAnsiChar;
    const Config: TGarryConfig): PGarryDatabaseHandle; cdecl;
  _garry_database_open: function(Path: PAnsiChar): PGarryDatabaseHandle; cdecl;
  _garry_database_close: procedure(DB: PGarryDatabaseHandle); cdecl;
  _garry_txn_begin: function(DB: PGarryDatabaseHandle): Integer; cdecl;
  _garry_txn_commit: procedure(DB: PGarryDatabaseHandle; Txn: Integer); cdecl;
  _garry_txn_rollback: procedure(DB: PGarryDatabaseHandle; Txn: Integer); cdecl;
  _garry_get: function(DB: PGarryDatabaseHandle; Txn: Integer;
    const Key: PByte; KeyLen: Integer;
    Value: PByte; var ValueLen: Integer): TGarryStatus; cdecl;
  _garry_set: function(DB: PGarryDatabaseHandle; Txn: Integer;
    const Key: PByte; KeyLen: Integer;
    const Value: PByte; ValueLen: Integer): TGarryStatus; cdecl;
  _garry_delete: function(DB: PGarryDatabaseHandle; Txn: Integer;
    const Key: PByte; KeyLen: Integer): TGarryStatus; cdecl;
  _garry_get_default: function(DB: PGarryDatabaseHandle; Txn: Integer;
    const Key: PByte; KeyLen: Integer;
    const Def: PByte; DefLen: Integer;
    Value: PByte; var ValueLen: Integer): TGarryStatus; cdecl;
  _garry_data: function(DB: PGarryDatabaseHandle; Txn: Integer;
    const Key: PByte; KeyLen: Integer): Integer; cdecl;
  _garry_first: function(DB: PGarryDatabaseHandle; Txn: Integer;
    Key: PByte; var KeyLen: Integer): Boolean; cdecl;
  _garry_last: function(DB: PGarryDatabaseHandle; Txn: Integer;
    Key: PByte; var KeyLen: Integer): Boolean; cdecl;
  _garry_next_key: function(DB: PGarryDatabaseHandle; Txn: Integer;
    const After: PByte; AfterLen: Integer;
    Key: PByte; var KeyLen: Integer): Boolean; cdecl;
  _garry_prev_key: function(DB: PGarryDatabaseHandle; Txn: Integer;
    const Before: PByte; BeforeLen: Integer;
    Key: PByte; var KeyLen: Integer): Boolean; cdecl;
  _garry_exists: function(DB: PGarryDatabaseHandle; Txn: Integer;
    const Key: PByte; KeyLen: Integer): Boolean; cdecl;
  _garry_count: function(DB: PGarryDatabaseHandle; Txn: Integer): Integer; cdecl;
  _garry_cursor_open: function(DB: PGarryDatabaseHandle; Txn: Integer;
    const Prefix: PByte; PrefixLen: Integer): PGarryCursorHandle; cdecl;
  _garry_cursor_next: function(Cursor: PGarryCursorHandle;
    Key: PByte; var KeyLen: Integer;
    Value: PByte; var ValueLen: Integer): Boolean; cdecl;
  _garry_cursor_next_key: function(Cursor: PGarryCursorHandle;
    Key: PByte; var KeyLen: Integer): Boolean; cdecl;
  _garry_cursor_close: procedure(Cursor: PGarryCursorHandle); cdecl;
  _garry_for_each: procedure(DB: PGarryDatabaseHandle; Txn: Integer;
    const Prefix: PByte; PrefixLen: Integer;
    Visitor: TGarryVisitor; UserData: Pointer); cdecl;
  _garry_key_split: function(Str: PAnsiChar; Delimiter: AnsiChar;
    OutBuf: PByte): Integer; cdecl;
  _garry_key_unsplit: function(const Key: PByte; KeyLen: Integer;
    Delimiter: AnsiChar; OutStr: PAnsiChar; OutSize: Integer): Integer; cdecl;
  _garry_make_key: function(Str: PAnsiChar; OutBuf: PByte): Integer; cdecl;
  _garry_make_key_parts: function(Parts: PPAnsiChar; Count: Integer;
    OutBuf: PByte): Integer; cdecl;
  _garry_empty_byte_array: procedure(OutBuf: PByte); cdecl;
  _garry_make_key_2: function(P1, P2: PAnsiChar): TGarryKeyTuple; cdecl;
  _garry_make_key_3: function(P1, P2, P3: PAnsiChar): TGarryKeyTuple; cdecl;
  _garry_make_key_4: function(P1, P2, P3, P4: PAnsiChar): TGarryKeyTuple; cdecl;
  _garry_encode_key_tuple: procedure(const T: PGarryKeyTuple; OutBuf: PByte); cdecl;
  _garry_byte_compare: function(const A: PByte; ALen: Integer;
    const B: PByte; BLen: Integer): Integer; cdecl;
  _garry_set_str: function(DB: PGarryDatabaseHandle; Txn: Integer;
    Key: PAnsiChar; Value: PAnsiChar): TGarryStatus; cdecl;
  _garry_get_str: function(DB: PGarryDatabaseHandle; Txn: Integer;
    Key: PAnsiChar; Value: PAnsiChar; ValueSize: Integer): TGarryStatus; cdecl;
  _garry_strerror: function(Status: TGarryStatus): PAnsiChar; cdecl;

procedure LoadGarryLib;
begin
  if GarryLibHandle <> 0 then
    Exit;
  GarryLibHandle := {$IFDEF FPC}dynlibs.LoadLibrary{$ELSE}LoadLibrary{$ENDIF}(GARRY_LIB);
  if GarryLibHandle = 0 then
    raise Exception.CreateFmt('Failed to load %s', [GARRY_LIB]);
